Move the remaining sections of Enroll Databases
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the remaining sections of the Enroll Databases
section into Zero Trust Access, since this functionality belongs to the
ZTA product.

--- a/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamodb.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/application-access/guides/dynamodb.mdx
@@ -31,7 +31,7 @@ The Teleport Application Service enables secure access to DynamoDB via its
 [integration](../cloud-apis/aws-console.mdx) with the AWS management console and
 API. This is an alternative to accessing DynamoDB through the Teleport Database
 service, as described in our [Protect Amazon DynamoDB with
-Teleport](../../../../enroll-resources/database-access/enroll-aws-databases/aws-dynamodb.mdx) guide.
+Teleport](../../database-access/enroll-aws-databases/aws-dynamodb.mdx) guide.
 
 <Admonition type="warning">
 The Application Service's integration with AWS is not designed specifically for
