--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/postgres-redshift.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/postgres-redshift.mdx
@@ -16,10 +16,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll Redshift with a self-hosted Teleport cluster](../../../../img/database-access/guides/redshift_selfhosted.png)
+![Enroll Redshift with a self-hosted Teleport cluster](../../../../../img/database-access/guides/redshift_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Enroll Redshift with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/redshift_cloud.png)
+![Enroll Redshift with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/redshift_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -202,5 +202,5 @@ to the Redshift database.
   credentials](https://docs.aws.amazon.com/redshift/latest/mgmt/generating-user-credentials.html) for Amazon Redshift.
 - Learn how to [restrict access](../rbac.mdx) to certain users and databases.
 - View the [High Availability (HA)](../guides/ha.mdx) guide.
-- Take a look at the YAML configuration [reference](../../../reference/agent-services/database-access-reference/configuration.mdx).
+- Take a look at the YAML configuration [reference](../../../../reference/agent-services/database-access-reference/configuration.mdx).
 
