--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/rds-oracle.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/rds-oracle.mdx
@@ -220,7 +220,7 @@ be merged into the same `teleport.keytab` file.
 
   To check if the user has any SPNs assigned, go to the user's page in AWS Console and locate the "Account settings - optional" section.
 
-  ![AWS AD Set SPN](../../../../img/database-access/guides/aws_ad_set_spn.png)
+  ![AWS AD Set SPN](../../../../../img/database-access/guides/aws_ad_set_spn.png)
 
   Alternatively, run the following command on the
   Windows machine joined to your Active Directory domain:
@@ -389,7 +389,7 @@ Other clients can use:
   - a custom JDBC connection string: 'jdbc:oracle:thin:@tcps://localhost:12345/ORCL?TNS_ADMIN=/home/alice/.tsh/keys/teleport.example.com/alice-db/teleport.example.com/oracle-wallet'
 ```
 
-This method also enables use of various graphical clients, as explained in [Oracle graphical clients](../../../connect-your-client/gui-clients.mdx#oracle-graphical-clients) section.
+This method also enables use of various graphical clients, as explained in [Oracle graphical clients](../../../../connect-your-client/gui-clients.mdx#oracle-graphical-clients) section.
 
 ## Next steps
 
