--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/rds.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/rds.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem label="Self-Hosted">
-![Teleport Architecture RDS Self-Hosted](../../../../img/database-access/guides/rds_selfhosted.png)
+![Teleport Architecture RDS Self-Hosted](../../../../../img/database-access/guides/rds_selfhosted.png)
 </TabItem>
 <TabItem label="Cloud-Hosted">
-![Teleport Architecture RDS Cloud-Hosted](../../../../img/database-access/guides/rds_cloud.png)
+![Teleport Architecture RDS Cloud-Hosted](../../../../../img/database-access/guides/rds_cloud.png)
 </TabItem>
 
 </Tabs>
