--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql.mdx
@@ -139,7 +139,7 @@ $ tsh db ls
   type="note"
 >
 You will only be able to see databases that your Teleport role has
-access to. See our [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
+access to. See our [RBAC](../rbac.mdx) guide for more details.
 </Admonition>
 
 When connecting to the database, use the name of the database's service account
