--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/oracle-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/oracle-self-hosted.mdx
@@ -38,7 +38,7 @@ labels:
 
 <Admonition type="tip">
 
-To modify an existing user to provide access to the Database Service, see [Database Access Controls](../../../../enroll-resources/database-access/rbac.mdx)
+To modify an existing user to provide access to the Database Service, see [Database Access Controls](../rbac.mdx)
 
 </Admonition>
 
@@ -63,7 +63,7 @@ $ tctl users add \
 </Admonition>
 
 For more detailed information about database access controls and how to restrict
-access see [RBAC](../../../../enroll-resources/database-access/rbac.mdx) documentation.
+access see [RBAC](../rbac.mdx) documentation.
 
 ## Step 2/6. Create a certificate/key pair and Teleport Oracle Wallet
 
