--- a/docs/pages/zero-trust-access/enroll-resources/database-access/guides/guides.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/guides/guides.mdx
@@ -18,6 +18,6 @@ enrolling databases:
 - [Health Checks](health-checks.mdx): Learn how to configure Teleport database health checks and view health information.
 
 The Teleport Database Service is one service that you can run on an a Teleport
-**agent.** Read the [Teleport Agents](../../../zero-trust-access/enroll-resources/agents/agents.mdx)
+**agent.** Read the [Teleport Agents](../../agents/agents.mdx)
 documentation for all of the methods you can use to join agents to your cluster
 in order to proxy various kinds of infrastructure resources.
