--- a/docs/pages/zero-trust-access/enroll-resources/database-access/rbac.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/rbac.mdx
@@ -30,7 +30,7 @@ The Database Service grants object-level permissions for the duration of a
 connection and revokes them automatically when the connection ends.
 
 For a more general description of Teleport roles and examples see
-[RBAC](../../admin-guides/access-controls/access-controls.mdx), as this section focuses on
+[RBAC](../../../admin-guides/access-controls/access-controls.mdx), as this section focuses on
 configuring RBAC for database access.
 
 <Admonition type="warning">
@@ -125,13 +125,13 @@ is not currently enforced on MySQL connection attempts.
 Similar to other role fields, `db_*` fields support templating variables.
 
 The `external.xyz` traits are replaced with values from external [single
-sign-on](../../zero-trust-access/sso/sso.mdx) providers. For OIDC, they will be
+sign-on](../../sso/sso.mdx) providers. For OIDC, they will be
 replaced with the value of an "xyz" claim. For SAML, they are replaced 
 with an "xyz" assertion value. 
 
 For full details on how traits work in Teleport roles, see
 the [Access Controls
-Reference](../../reference/access-controls/roles.mdx).
+Reference](../../../reference/access-controls/roles.mdx).
 
 For example, here is what a role may look like if you want to assign allowed
 database names from the user's Okta `databases` assertion:
