--- a/docs/pages/connect-your-client/model-context-protocol/database-access.mdx
+++ b/docs/pages/connect-your-client/model-context-protocol/database-access.mdx
@@ -9,9 +9,9 @@ This guide explains how to connect to your **PostgreSQL** Teleport databases wit
 
 (!docs/pages/includes/edition-prereqs-tabs.mdx clients="\`tsh\` client"!)
 
-- Teleport Database Service with a PostgreSQL database enrolled. See our [guides](../../enroll-resources/database-access/database-access.mdx)
+- Teleport Database Service with a PostgreSQL database enrolled. See our [guides](../../index.mdx)
   for options on how to set up Database Access for PostgreSQL databases, such as
-  the [AWS RDS PostgreSQL](../../enroll-resources/database-access/enroll-aws-databases/rds.mdx)
+  the [AWS RDS PostgreSQL](../../zero-trust-access/enroll-resources/database-access/enroll-aws-databases/rds.mdx)
   and [self-hosted PostgreSQL](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx) guides.
 
 <Admonition type="warning" title="Security considerations">
@@ -37,8 +37,8 @@ Remember that you will also need sufficient permissions on your Teleport user to
 access the database using this user.
 
 You can also set up fine-grained permissions for use with MCP using [Auto-user
-provisioning](../../enroll-resources/database-access/auto-user-provisioning/postgres.mdx)
-or [Database Access Controls](../../enroll-resources/database-access/rbac.mdx).
+provisioning](../../zero-trust-access/enroll-resources/database-access/auto-user-provisioning/postgres.mdx)
+or [Database Access Controls](../../zero-trust-access/enroll-resources/database-access/rbac.mdx).
 </Admonition>
 
 ### Step 1/2. Installation
