--- a/docs/pages/includes/database-access/db-introduction.mdx
+++ b/docs/pages/includes/database-access/db-introduction.mdx
@@ -1,6 +1,6 @@
 Teleport can provide secure access to {{ dbType }} via the  [Teleport Database
-Service](../../enroll-resources/database-access/database-access.mdx). This allows for
-fine-grained access control through [Teleport's RBAC](../../enroll-resources/database-access/rbac.mdx).
+Service](../../index.mdx). This allows for
+fine-grained access control through [Teleport's RBAC](../../zero-trust-access/enroll-resources/database-access/rbac.mdx).
 
 In this guide, you will:
 
