--- a/docs/pages/includes/database-access/self-hosted-introduction.mdx
+++ b/docs/pages/includes/database-access/self-hosted-introduction.mdx
@@ -1,7 +1,7 @@
 Teleport can provide secure access to {{ dbType }} via the [Teleport Database
-Service](../../enroll-resources/database-access/database-access.mdx). This allows for fine-grained
+Service](../../index.mdx). This allows for fine-grained
 access control through the [Teleport RBAC
-system](../../enroll-resources/database-access/rbac.mdx).
+system](../../zero-trust-access/enroll-resources/database-access/rbac.mdx).
 
 The Teleport Database Service proxies traffic from database clients to
 self-hosted databases in your infrastructure. Teleport maintains a certificate
