--- a/docs/pages/zero-trust-access/enroll-resources/agents/kubernetes.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/agents/kubernetes.mdx
@@ -247,5 +247,5 @@ namespace "teleport-agent" deleted
 - The possible values for `teleport-kube-agent` chart are documented
   [in its reference](../../../reference/helm-reference/teleport-kube-agent.mdx).
 - See [Application Access Guides](../application-access/guides/guides.mdx)
-- See [Database Access Guides](../../../enroll-resources/database-access/guides/guides.mdx)
+- See [Database Access Guides](../database-access/guides/guides.mdx)
 {/* vale messaging.protocol-products = YES */}
