--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/aws.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/aws.mdx
@@ -295,17 +295,17 @@ Additional Teleport RBAC configuration and possibly IAM configuration may also
 be required to connect to the discovered databases via Teleport.
 
 Refer to the appropriate guide in
-[Enroll AWS Databases](../../../../enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx)
+[Enroll AWS Databases](../../database-access/enroll-aws-databases/enroll-aws-databases.mdx)
 for information about database user provisioning and configuration.
 </Admonition>
 
 ## Next
-- Learn about [Dynamic Registration](../../../../enroll-resources/database-access/guides/dynamic-registration.mdx) by the
+- Learn about [Dynamic Registration](../../database-access/guides/dynamic-registration.mdx) by the
   Teleport Database Service.
-- Get started by [connecting](../../../../enroll-resources/database-access/guides/guides.mdx) your database.
-- Connect AWS databases in [external AWS accounts](../../../../enroll-resources/database-access/enroll-aws-databases/aws-cross-account.mdx).
+- Get started by [connecting](../../database-access/guides/guides.mdx) your database.
+- Connect AWS databases in [external AWS accounts](../../database-access/enroll-aws-databases/aws-cross-account.mdx).
 - Refer to the appropriate guide in
-[Enroll AWS Databases](../../../../enroll-resources/database-access/enroll-aws-databases/enroll-aws-databases.mdx)
+[Enroll AWS Databases](../../database-access/enroll-aws-databases/enroll-aws-databases.mdx)
 for information about database user provisioning and configuration.
 
 ## Troubleshooting
