--- a/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/mariadb.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/mariadb.mdx
@@ -12,7 +12,7 @@ labels:
 ## Prerequisites
 
 - Teleport cluster with a configured [self-hosted
-  MariaDB](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MariaDB](../enroll-aws-databases/rds.mdx)
+  MariaDB](../enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MariaDB](../enroll-aws-databases/rds.mdx)
   database.
 - Ability to connect to and create user accounts in the target database.
 
@@ -162,6 +162,6 @@ database queries in the Teleport Audit Logs, when the Teleport username is over
 
 ## Next steps
 
-- Connect using your [GUI database client](../../../connect-your-client/gui-clients.mdx).
-- Learn about [role templating](../../../admin-guides/access-controls/guides/role-templates.mdx).
+- Connect using your [GUI database client](../../../../connect-your-client/gui-clients.mdx).
+- Learn about [role templating](../../../../admin-guides/access-controls/guides/role-templates.mdx).
 - Read automatic user provisioning [RFD](https://github.com/gravitational/teleport/blob/master/rfd/0113-automatic-database-users.md).
