--- a/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/mysql.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/mysql.mdx
@@ -33,7 +33,7 @@ stripping its privileges.
 ## Prerequisites
 
 - Teleport cluster with a configured [self-hosted
-  MySQL](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MySQL](../enroll-aws-databases/rds.mdx)
+  MySQL](../enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MySQL](../enroll-aws-databases/rds.mdx)
   database.
 - Ability to connect to and create user accounts in the target database.
 - Automatic user provisioning is not compatible with MySQL versions lower than
@@ -164,6 +164,6 @@ endpoints. Please use auto-user provisioning on the primary endpoints.
 
 ## Next steps
 
-- Connect using your [GUI database client](../../../connect-your-client/gui-clients.mdx).
-- Learn about [role templating](../../../admin-guides/access-controls/guides/role-templates.mdx).
+- Connect using your [GUI database client](../../../../connect-your-client/gui-clients.mdx).
+- Learn about [role templating](../../../../admin-guides/access-controls/guides/role-templates.mdx).
 - Read automatic user provisioning [RFD](https://github.com/gravitational/teleport/blob/master/rfd/0113-automatic-database-users.md).
