--- a/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/postgres.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/auto-user-provisioning/postgres.mdx
@@ -12,7 +12,7 @@ labels:
 ## Prerequisites
 
 - Teleport cluster with a configured [self-hosted
-  PostgreSQL](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx) or [RDS
+  PostgreSQL](../enroll-self-hosted-databases/postgres-self-hosted.mdx) or [RDS
   PostgreSQL](../enroll-aws-databases/rds.mdx) database. To configure
   permissions for database objects like tables, your cluster must be on version
   v15.2 or above.
@@ -81,7 +81,7 @@ hostssl all             all             ::/0                    cert
 hostssl all             all             0.0.0.0/0               cert
 ```
 
-Refer to the [self-hosted PostgreSQL guide](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx#step-35-configure-your-postgresql-server)
+Refer to the [self-hosted PostgreSQL guide](../enroll-self-hosted-databases/postgres-self-hosted.mdx#step-35-configure-your-postgresql-server)
 to ensure that your configuration is correct.
 </TabItem>
 </Tabs>
@@ -296,13 +296,13 @@ admin user through Teleport.
 ## Next steps
 
 - Connect using your [GUI database
-  client](../../../connect-your-client/gui-clients.mdx).
+  client](../../../../connect-your-client/gui-clients.mdx).
 - Learn about [role
-  templating](../../../admin-guides/access-controls/guides/role-templates.mdx).
+  templating](../../../../admin-guides/access-controls/guides/role-templates.mdx).
 - Read automatic user provisioning [RFD](https://github.com/gravitational/teleport/blob/master/rfd/0113-automatic-database-users.md).
 - Read database permission management [RFD](https://github.com/gravitational/teleport/blob/master/rfd/0151-database-permission-management.md).
 - The `internal.db_roles` traits we illustrated in this guide
   are replaced with values from the Teleport local user database. For full
   details on how variable expansion works in Teleport roles, see the [Teleport
-  Access Controls Reference](../../../reference/access-controls/roles.mdx).
+  Access Controls Reference](../../../../reference/access-controls/roles.mdx).
 
