--- a/docs/pages/zero-trust-access/enroll-resources/database-access/database-access.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/database-access.mdx
@@ -19,14 +19,14 @@ Some of the things you can do with database access:
 Teleport protects databases through the Teleport Database Service, which is a
 Teleport Agent service. For more information on agent services, read [Teleport
 Agent Architecture](../../../reference/architecture/agents.mdx). You can also learn how to
-deploy a [pool of Teleport Agents](../../enroll-resources/agents/agents.mdx) to run multiple
+deploy a [pool of Teleport Agents](../../../zero-trust-access/enroll-resources/agents/agents.mdx) to run multiple
 agent services.
 
 ![Architecture diagram for enrolling databases with Teleport](../../../../img/database-access/architecture.svg)
 
 ## Getting started
 
-- [Getting Started Guide](./getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
+- [Getting Started Guide](getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
 
 ## Guides
 
@@ -39,10 +39,10 @@ agent services.
 
 ## Configuration & management
 
-- [Access Controls](../../../enroll-resources/database-access/rbac.mdx): Role-based access control (RBAC) for Teleport database access.
+- [Access Controls](./rbac.mdx): Role-based access control (RBAC) for Teleport database access.
 - [Using the Teleport Database Service (section)](./guides/): Guides to possibilities for running the Teleport Database Service.
 
 ## Troubleshooting & support
 
-- [FAQ](../../../enroll-resources/database-access/faq.mdx): Frequently asked questions about Teleport database access.
-- [Troubleshooting](../../../enroll-resources/database-access/troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
+- [FAQ](./faq.mdx): Frequently asked questions about Teleport database access.
+- [Troubleshooting](./troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
