--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/aws-memorydb.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/aws-memorydb.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll MemoryDB with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/aws_memorydb_selfhosted.png)
+![Enroll MemoryDB with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/aws_memorydb_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud","team"]} label="Teleport Cloud">
-![Enroll MemoryDB with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/aws_memorydb_cloud.png)
+![Enroll MemoryDB with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/aws_memorydb_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -142,7 +142,7 @@ MemoryDB](https://docs.aws.amazon.com/memorydb/latest/devguide/clusters.acls.htm
 Once an MemoryDB user is created with the desired access, add an AWS resource
 tag `teleport.dev/managed` with the value `true` to this user:
 
-![Managed User Tag](../../../../img/database-access/guides/redis/redis-aws-managed-user-tag.png)
+![Managed User Tag](../../../../../img/database-access/guides/redis/redis-aws-managed-user-tag.png)
 
 The Database Service will automatically discover this user if it is associated
 with a registered database. Keep in mind that it may take the Database Service
