--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/redis-aws.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-aws-databases/redis-aws.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll ElastiCache with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/redis_elasticache_selfhosted.png)
+![Enroll ElastiCache with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/redis_elasticache_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud","team"]} label="Teleport Cloud">
-![Enroll ElastiCache with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/redis_elasticache_cloud.png)
+![Enroll ElastiCache with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/redis_elasticache_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -144,7 +144,7 @@ $ aws elasticache modify-replication-group \
 Once the ElastiCache user has been created, verify that the user is configured
 to satisfy the requirements for IAM authentication:
 
-![ElastiCache IAM-enabled User](../../../../img/database-access/guides/redis/redis-aws-iam-user@2x.png)
+![ElastiCache IAM-enabled User](../../../../../img/database-access/guides/redis/redis-aws-iam-user@2x.png)
 
 </TabItem>
 
@@ -157,7 +157,7 @@ ElastiCache](https://docs.aws.amazon.com/AmazonElastiCache/latest/dg/Clusters.RB
 Once an ElastiCache user is created with the desired access, add an AWS resource
 tag `teleport.dev/managed` with the value `true` to this user:
 
-![Managed User Tag](../../../../img/database-access/guides/redis/redis-aws-managed-user-tag.png)
+![Managed User Tag](../../../../../img/database-access/guides/redis/redis-aws-managed-user-tag.png)
 
 The Database Service will automatically discover this user if it is associated
 with a registered database. Keep in mind that it may take the Database Service
