--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/mysql-cloudsql.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/mysql-cloudsql.mdx
@@ -183,7 +183,7 @@ $ tsh db ls
   type="note"
 >
 You will only be able to see databases that your Teleport role has
-access to. See our [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
+access to. See our [RBAC](../rbac.mdx) guide for more details.
 </Admonition>
 
 When connecting to the database, use either the database user name or the
