--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx
@@ -138,7 +138,7 @@ $ tsh db ls
 </Tabs>
 
 Note that you will only be able to see databases your role has access to. See
-[RBAC](../../../../enroll-resources/database-access/rbac.mdx) section for more details.
+[RBAC](../rbac.mdx) section for more details.
 
 To retrieve credentials for a database and connect to it:
 
@@ -165,6 +165,6 @@ $ tsh db logout
 
 ## Next steps
 
-- Set up [automatic database user provisioning](../../../../enroll-resources/database-access/auto-user-provisioning/postgres.mdx).
+- Set up [automatic database user provisioning](../auto-user-provisioning/postgres.mdx).
 
 (!docs/pages/includes/database-access/guides-next-steps.mdx!)
