--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/vitess.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/vitess.mdx
@@ -188,7 +188,7 @@ $ tsh db ls
 </Tabs>
 
 Note that you will only be able to see databases your role has access to. See
-the [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
+the [RBAC](../rbac.mdx) guide for more details.
 
 To retrieve credentials for a database and connect to it:
 
