--- a/docs/pages/zero-trust-access/enroll-resources/database-access/getting-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/getting-started.mdx
@@ -90,7 +90,7 @@ GRANT rds_iam TO alice;
 For more information about connecting to the PostgreSQL instance directly,
 see the AWS [documentation](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/USER_ConnectToPostgreSQLInstance.html).
 
-See the [Automatic User Provisioning](../../../enroll-resources/database-access/rbac.mdx) guide for how to configure Teleport to create accounts for your PostgreSQL users on demand.
+See the [Automatic User Provisioning](rbac.mdx) guide for how to configure Teleport to create accounts for your PostgreSQL users on demand.
 
 ## Step 2/5. Configure the Teleport Database Service
 
@@ -248,9 +248,9 @@ $ tsh db connect --db-user=alice --db-name postgres aurora
 For the next steps, dive deeper into the topics relevant to your Database
 Access use-case, for example:
 
-- Check out configuration [guides](../../../enroll-resources/database-access/guides/guides.mdx).
+- Check out configuration [guides](guides/guides.mdx).
 - Learn how to configure [GUI clients](../../../connect-your-client/gui-clients.mdx).
 - Learn about database access [role-based access
-  control](../../../enroll-resources/database-access/rbac.mdx).
-- See [frequently asked questions](../../../enroll-resources/database-access/faq.mdx).
+  control](rbac.mdx).
+- See [frequently asked questions](faq.mdx).
 
