--- a/docs/pages/zero-trust-access/enroll-resources/database-access/guides/dynamic-registration.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/guides/dynamic-registration.mdx
@@ -100,7 +100,7 @@ spec:
 version: v5
 ```
 
-See the full database resource spec [reference](../../../reference/agent-services/database-access-reference/configuration.mdx).
+See the full database resource spec [reference](../../../../reference/agent-services/database-access-reference/configuration.mdx).
 
 To create a database resource, run:
 
@@ -130,11 +130,11 @@ $ tctl rm db/example
 ```
 
 Aside from `tctl`, dynamic resources can also be added by:
-- [Auto-Discovery](../../../zero-trust-access/enroll-resources/auto-discovery/databases/databases.mdx)
-- [Terraform Provider](../../../zero-trust-access/infrastructure-as-code/terraform-provider/terraform-provider.mdx)
-- [Kubernetes Operator](../../../zero-trust-access/infrastructure-as-code/teleport-operator/teleport-operator.mdx)
-- [Teleport API](../../../admin-guides/api/api.mdx)
+- [Auto-Discovery](../../auto-discovery/databases/databases.mdx)
+- [Terraform Provider](../../../infrastructure-as-code/terraform-provider/terraform-provider.mdx)
+- [Kubernetes Operator](../../../infrastructure-as-code/teleport-operator/teleport-operator.mdx)
+- [Teleport API](../../../../admin-guides/api/api.mdx)
 
-See [Using Dynamic Resources](../../../zero-trust-access/infrastructure-as-code/infrastructure-as-code.mdx) to learn
+See [Using Dynamic Resources](../../../infrastructure-as-code/infrastructure-as-code.mdx) to learn
 more about managing Teleport's dynamic resources in general.
 
