Apply suggestions from code review
Co-authored-by: Roman Tkachenko <roman@goteleport.com>

--- a/docs/pages/admin-guides/management/guides/aws-iam-identity-center/using-aws-cli.mdx
+++ b/docs/pages/admin-guides/management/guides/aws-iam-identity-center/using-aws-cli.mdx
@@ -80,7 +80,7 @@ and ask you confirm the AWS CLI tool's access to AWS using your account.
 
 ## Step 2/2. Creating AWS Profiles
 
-You will need to create a separate AWS profile for each AWS Account and Permission Set
+You will need to create a separate AWS CLI profile for each AWS Account and Permission Set
 you want to access. These profiles will reference the SSO Session created above,
 which tells the AWS tools to use SSO authentication when the profile is active.
 
@@ -205,5 +205,5 @@ where `${SSO_SESSION_NAME}` is the name of your configured SSO session.
 ## Further reading
 
 For a broader introduction to using the AWS CLI with IAM Identity Center, see the
-AWS [Configuring IAM IDentity Center authentication with the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-sso.html#cli-configure-sso-configure)
+AWS [Configuring IAM Identity Center authentication with the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-sso.html#cli-configure-sso-configure)
 guide.
