--- a/docs/pages/enroll-resources/desktop-access/active-directory.mdx
+++ b/docs/pages/enroll-resources/desktop-access/active-directory.mdx
@@ -28,7 +28,7 @@ To complete the steps in this guide, verify your environment meets the following
   encrypted LDAP connection, you should verify that your domain uses Active Directory
   Certificate Services or a non-Microsoft certification authority (CA) to issue LDAPS
   certificates.
-- Each Domain Controler must have a valid certificate with Smart Card Logon EKU included
+- Each Domain Controller must have a valid certificate with Smart Card Logon EKU included
 - Administrative access to a domain controller.
 - (!docs/pages/includes/tctl.mdx!)
 
