--- a/docs/pages/enroll-resources/desktop-access/troubleshooting.mdx
+++ b/docs/pages/enroll-resources/desktop-access/troubleshooting.mdx
@@ -148,19 +148,25 @@ Open the Windows Event Log and navigate to Event Viewer, Application and Service
 Microsoft, Windows, Security-Kerberos, Operational. Enable this Event Log and attempt
 to connect with Teleport Web UI to review log entries.
 
-#### The Kerberos Key Distribution Center (KDC) for the domain "Your Domain" does not have a certificate installed or does not support logon using certificates: 0xC0000320
+#### The Kerberos Key Distribution Center (KDC) for the domain "Your Domain" does not 
+havea certificate installed or does not support logon using certificates: 0xC0000320
 
-You see this error in your *Security-Kerberos* Windows Event log on the client you're trying to connect to.
+You see this error in your *Security-Kerberos* Windows Event log on the client you're 
+trying to connect to.
 
-**Solution:** Review the Kerberos-Key-Distribution-Center Logs on each of your **Domain controller** for causes.
+**Solution:** Review the Kerberos-Key-Distribution-Center Logs on each of your **Domain 
+controller** for causes.
 
-The *Kerberos-Key-Distribution-Center* Windows Event Log provides information on KDC configuration that's required for Smartcard Authentication. This Event Log might not be enabled by default.
+The *Kerberos-Key-Distribution-Center* Windows Event Log provides information on KDC configuration 
+that's required for Smartcard Authentication. This Event Log might not be enabled by default.
 Open the Windows Event Log and navigate to Event Viewer, Application and Services Logs,
-Microsoft, Windows, Kerberos-Key-Distribution-Center, Operational. Enable this Event Log, restart the *Kerberos Key Distribution Center* service and review the logs
+Microsoft, Windows, Kerberos-Key-Distribution-Center, Operational. 
+Enable this Event Log, restart the *Kerberos Key Distribution Center* service and review the logs
 
 You should see a log that looks like :
 ```
-The Key Distribution Center (KDC) uses the below KDC certificate for smart card or certificate authentication.
+The Key Distribution Center (KDC) uses the below KDC certificate for smart card or 
+certificate authentication.
 
 Kdc Certificate Information:
   Issuer Name: <Your PKI>
@@ -169,30 +175,38 @@ Kdc Certificate Information:
   Template: Kerberos Authentication
 ```
 
-If the template name you see is *Domain Controller* this template does not include the EKU for Smart Card by default.
+If the template name you see is *Domain Controller* this template does not include 
+the EKU for Smart Card by default.
 
-You can check in the local computer Personnal certificat store if the certificate has the "Smart Card Logon" listed in the intended purpose column. If it's not the case:
-- Request a new certificat for your domain controller using the default "Kerberos Autentication" Template or any custom template allowing for Smart Card Logon
+You can check in the local computer Personnal certificat store if the certificate has the 
+"Smart Card Logon" listed in the intended purpose column. If it's not the case:
+- Request a new certificat for your domain controller using the default "Kerberos Autentication" 
+Template or any custom template allowing for Smart Card Logon
 - Remove the old certificate
 - Restart the *Kerberos Key Distribution Center* Windows service
 - Repeat the operation for every Domain controller
 
 ![Certificate Manager view](../../../img/desktop-access/certificate-configuration.png)
 
-#### The Key Distribution Center (KDC) cannot find a suitable certificate to use. This KDC is not enabled for smart card or certificate authentication.
+#### The Key Distribution Center (KDC) cannot find a suitable certificate to use. This KDC is 
+not enabled for smart card or certificate authentication.
 
 You see this error in your *Kerberos-Key-Distribution-Center* Windows Event log on the domain controller
 
-**Solution:** Review the Each certificate in the certification chain and ensure that all certificates are valid and that the Certificate Revocation List (CRL) URLs for each certificate are not expired and available.
+**Solution:** Review each certificate in the certification chain and ensure that : 
+- Your domain controllers Certificats include the Smart Card EKU
+- All Certificates are valid
+- All Certificate Revocation List (CRL) URLs for each certificate are not expired and available.
 
-If the *Kerberos-Key-Distribution-Center* logs doesn't list a certificate for authentication, Smart Card authentifcation will not work.
+If the *Kerberos-Key-Distribution-Center* logs doesn't list a certificate for authentication, Smart Card will not work.
 To check if your certificates are not expired and CRL working you can use the following command
 ``` powershell
 certutil -f -verify -URLfetch base64_exported_DomainControler_certificate.cer
 ```
 Review the output with attention.
 
-For checking CRL you can also use certutil GUI. Simply run the command below and click on the "Retrive". Below is an example of an expired revocation list that needs to be addressed
+For checking CRL you can also use certutil GUI. Simply run the command below and click on 
+the "Retrive". Below is an example of an expired revocation list that needs to be addressed
 
 ![Certutil GUI](../../../img/desktop-access/certutilgui.png)
 
@@ -201,9 +215,12 @@ Note that you can click on the items listed to open them for review.
 
 Another tool you can use for checking if everything is in order is *pkiview.msc*.
 
-pkiview.msc is included with the feature "Active Directory Certificate Services Tools" under the "Remote Server Administration Tools => Role Administration Tools" in the feature installation wizard
+pkiview.msc is included with the feature "Active Directory Certificate Services Tools" under 
+the "Remote Server Administration Tools => Role Administration Tools" in the feature installation wizard
 
-pkiview.msc can be installed on any Domain Joined machine and lets you see the health and informations for the Ntauthstore, CDP containers and more. [Review this Microsoft article to learn more on how to use it](https://techcommunity.microsoft.com/blog/coreinfrastructureandsecurityblog/quick-check-on-adcs-health-using-enterprise-pki-tool-pkiview/1128638)
+pkiview.msc can be installed on any Domain Joined machine and lets you see the health and 
+informations for the Ntauthstore, CDP containers and more. 
+[Review this Microsoft article to learn more on how to use it](https://techcommunity.microsoft.com/blog/coreinfrastructureandsecurityblog/quick-check-on-adcs-health-using-enterprise-pki-tool-pkiview/1128638)
 
 ### Smart card certificate not trusted
 
